# AUT_AP_Homework_Answer

./: README.md
AUT_AP_2025_Spring_HW1/: CMakeLists.txt
AUT_AP_2025_Spring_HW1/src/: Q2_Sort_By_Distance.cpp  Q2_Sort_By_Distance.h  Q3_Count_Islands.cpp  Q3_Count_Islands.h  unit_test.cpp
AUT_AP_2025_Spring_HW2/: CMakeLists.txt
AUT_AP_2025_Spring_HW2/include/: Q1_Variadic_Template_sum.h  Q2_Word_Frequency.h
AUT_AP_2025_Spring_HW2/src/: Q1_Variadic_Template_sum.cpp  Q1_Variadic_Template_sum.h  Q2_Word_Frequency.cpp  Q2_Word_Frequency.h  main.cpp  unit_test.cpp
